Kim's edits to the component manual. Committed by Peter W, sept 21st
git-svn-id: https://svn.mccode.org/svn/McStasTeX@81 feec88ba-9254-4c29-afb0-2c2f27bf560d

--- a/trunk/Component_manual.tex
+++ b/trunk/Component_manual.tex
@@ -44,7 +44,7 @@
 
 \newcommand{\MCS}{{McStas}}
 \newcommand{\version}{{1.9}}
-\newcommand{\reldate}{{May 1st, 2005}}
+\newcommand{\reldate}{{October 1st, 2005}}
 \newcommand{\Ombold}{\mbox{\boldmath $\Omega$}}
 
 % enable index generation
@@ -80,6 +80,11 @@
 \include{intro_comp}
 \include{techniq}
 \include{comp}
+\include{sources}
+\include{optics}
+\include{samples}
+\include{monitors}
+\include{misc}
 \include{comp_removed}
 %\include{comp_future}
 
