--- a/trunk/abstractpage_comp.tex
+++ b/trunk/abstractpage_comp.tex
@@ -25,7 +25,7 @@ Institut Laue-Langevin, Grenoble, France \\
 email: \verb+farhi@ill.fr+ \\
 \vskip\baselineskip\noindent
 Klaus Lieutenant \\
-Institut Laue-Langevin, Grenoble, France \\
+Institut Laue-Langevin, Grenoble, France 
 email: \verb+lieutenant@ill.fr+
 \end{quote}
 %Front page illustration:\\[\baselineskip]
