--- a/trunk/moderator.tex
+++ b/trunk/moderator.tex
@@ -3,15 +3,15 @@
 \index{Sources!Time of flight pulsed moderator}
 
 \component{Moderator}{System}{$r_s$, $E_0$, $E_1$, $z_f$, $w$, $h$, $\tau_0$, $E_c$, $\gamma$}{}{}
+
 The simple time-of-flight source component {\bf Moderator} resembles
-the source component {\bf Source\_flat} described in \ref{sourceaim}.
-Like {\bf Source\_flat}, {\bf Moderator} is circular and focuses
+the source component {\bf Source\_simple} described in \ref{source-simple}.
+{\bf Moderator} is circular and focuses
 on a rectangular target. Further, the initial velocity is chosen
 with a linear distribution within an interval, defined by the
-minimum and maximum energies, $E_0$ and $E_1$,
-respectively.
+minimum and maximum energies, $E_0$ and $E_1$, respectively.
 
-The initial time of the neutron is determined on basis of a
+The initial time of the neutron is determined on basis of a 
 simple heuristical model for the time dependence of the
 neutron intensity from a time-of-flight source.
 For all neutron energies, the flux decay is assumed to be exponential,
