--- a/trunk/source_gen.tex
+++ b/trunk/source_gen.tex
@@ -1,31 +1,37 @@
 \section{Source\_gen: A general continuous source}
 \label{source-gen}
-\index{Sources!An All-in-One continuous source(Source\_gen)}
+\index{Sources!Source\_gen}
 
-\component{Source\_gen}{System, E. Farhi}{$w$, $h$, $xw$, $yh$, $E_0$, $\Delta E$, $T_1$, $T_2$, $T_3$, $I_1$, $I_2$, $I_3$ }{$r$, $\lambda_0$, $d\lambda$, $E_{min}$, $E_{max}$, $\lambda_{min}$, $\lambda_{max}$}{Validated for Maxwellian expressions, position is the center of area}
+\component{Source\_gen}{(System) E. Farhi, ILL}{$w$, $h$, $xw$, $yh$, $E_0$, $\Delta E$, $T_1$, $T_2$, $T_3$, $I_1$, $I_2$, $I_3$ }{$r$, $\lambda_0$, $d\lambda$, $E_{min}$, $E_{max}$, $\lambda_{min}$, $\lambda_{max}$}{Validated for Maxwellian expressions}
 
 This component is a continuous neutron source (rectangular or circular), which aims at
-a square target centered at the beam (in order to improve MC-acceptance
-rate). The angular divergence is then given by the dimensions of the
-target. Size may be rectangular (dimension $h$ and $w$, or a disk of radius $r$. The wavelength/energy range to emit is specified either using center and half width, or using minimum and maximum boundaries, alternatively for energy and wavelength.
+a rectangular target centered at the beam. 
+The angular divergence is given by the dimensions of the target. 
+The shape may be rectangular (dimension $h$ and $w$), or a disk of radius $r$. 
+The wavelength/energy range to emit is specified either using center and half width, or using minimum and maximum boundaries, alternatively for energy and wavelength.
 The flux spectrum is specified with the same Maxwellian parameters as in component Source\_Maxwell\_3 (refer to section \ref{source-maxwell}).
 
-Maxwellian parameters for some sources are in the table given below. For some cases, a correction factor (multiply $I$ parameters) should be used to reach measured data.
+Maxwellian parameters for some sources are given in Table~\ref{t:source-params}. 
 
 \begin{table}
   \begin{center}
   {\let\my=\\
-    \begin{tabular}{cccccccc}
+    \begin{tabular}{|c|cccccc|c|}
     \hline
     Source Name & $T_1$ & $I_1$ & $T_2$ & $I_2$ & $T_3$ & $I_3$ & factor \\
     \hline
-    PSI cold source & 150.42 & 3.67e11   & 38.74 & 3.64e11    & 14.84& 0.95e11    &\\
-    ILL VCS (H1)    & 216.8  & 1.24e13  & 33.9  & 1.02e13   & 16.7 & 3.0423e12 &\\
+    PSI cold source & 150.42 & 3.67e11   & 38.74 & 3.64e11    & 14.84& 0.95e11    & * $I_{\rm target}$~(mA)\\
+    ILL VCS (H1)    & 216.8  & 1.24e13   & 33.9  & 1.02e13    & 16.7 & 3.0423e12  &\\
     ILL HCS (H5)    & 413.5  & 10.22e12  & 145.8 & 3.44e13    & 40.1 & 2.78e13    & *2\\
-    ILL Thermal(H2) & 683.7  & 0.5874e13& 257.7 & 2.5099e13 & 16.7 & 1.0343e12 & /2.25\\
-    ILL Hot source  & 1695   & 1.74e13   & 708   & 3.9e12     &      &            &\\
+    ILL Thermal(H2) & 683.7  & 0.5874e13 & 257.7 & 2.5099e13  & 16.7 & 1.0343e12  & /2.25\\
+    ILL Hot source  & 1695   & 1.74e13   & 708   & 3.9e12     &      &            &\\ \hline
     \end{tabular}
-    \caption{Flux parameters for Source\_gen and Source\_Maxwell\_3. ILL cold sources data are obtained from \cite{Ageron89}.}
+    \caption{Flux parameters for actual sources used in components
+             Source\_gen and Source\_Maxwell\_3.
+             For some cases, a correction factor to the intensity 
+             should be used to reach measured data; for the PSI cold source,
+             this correction factor is the beam current, $I_{\rm target}$.
+}
     \label{t:source-params}
   }
   \end{center}
