--- a/trunk/sources.tex
+++ b/trunk/sources.tex
@@ -8,13 +8,19 @@
 \MCS\ contains a number of different source components,
 and any simulation will contain exactly one source.
 The main function of a source is to determine a set of initial
-parameters $({\bf r}, {\bf v}, t)$, or equivalent (${\bf r}, v, \Ombold , t $),
-for each neutron. This is done by Monte Carlo choices from
-suitable distributions. For example, the initial position is
-always found from a uniform distribution over the source surface.
-For time-of-flight sources, the choice of $t$ is being made on basis of
-detailed analytical expressions.
-For other sources, the initial neutron time is set to zero (default). In the case you would like to use a 'conventional' source (e.g. steady state source) with time-of-flight settings, it is then \emph{important} to set the time of each neutron using a random number from a distribution. This may be achieved thanks to the \verb+EXTEND+ keyword in the instrument description source:\index{Keyword!EXTEND}
+parameters $({\bf r}, {\bf v}, t)$
+for each neutron ray. This is done by Monte Carlo choices from
+suitable distributions. For example, in all present sources the initial position is
+found from a uniform distribution over the source surface.
+For time-of-flight sources, the choice of the emission time, $t$,
+is being made on basis of detailed analytical expressions.
+For other sources, $t$ is set to zero (default). 
+In the case one would like to use a steady state source 
+with time-of-flight settings, 
+the emission time of each neutron ray should be determined using 
+a Monte Carlo choice. This may be achieved by 
+the \verb+EXTEND+ keyword in the instrument description source
+as in the example below:
 
 \begin{verbatim}
   TRACE
@@ -58,17 +64,19 @@ $$ p_0 = \frac{N_{\rm total}}{N_{\rm sim}} =
 
 The simulations are performed so that detector intensities
 are independent of the number of neutron histories simulated
-(though of course more neutron histories will give better statistics).
+(although more neutron histories will give better statistics).
 
 As a start, we recommand new \MCS\ users to use the Source\_simple component, then use the Source\_Maxwell\_3 or the Source\_gen.
 
-Optimizers can dramatically improve the statistics, but may occasionally give wrong results, due to misleaded optimization. You should always check such simulations with non-optimized ones.
+Optimizers can dramatically improve the statistics, but may occasionally 
+give wrong results, due to misleaded optimization. 
+You should always check such simulations with (shorter) non-optimized ones.
 
 Other ways to speed-up simulations are to read events from a file. See section \ref{sources-seealso} for possible file formats.
 
 \begin{figure}
   \begin{center}
-    \includegraphics[width=0.9\textwidth]{figures/sources.eps}
+    \includegraphics[width=0.75\textwidth]{figures/sources.eps}
   \end{center}
 \caption{A circular source component (at z=0) emitting neutron events randomly, either from a model, or from a data file.}
 \label{f:source}
@@ -102,21 +110,28 @@ Other ways to speed-up simulations are to read events from a file. See section \
 \section{Other sources components}
 \label{sources-seealso}
 
-There are other ways to define a source.
+There are many other source definitions in \MCS .
 
-Pulsed source components are available for new facilities:\index{Sources!Pulsed sources}
-\begin{enumerate}
+Detailed pulsed source components are available for new facilities
+in a number of contributed components not described in this manuel:
+\begin{itemize}
 \item SNS ({\bf contrib/SNS\_source})
 \item ISIS ({\bf contrib/ISIS\_moderator})
-\item ESS (project) ({\bf ESS\_moderator\_long} and {\bf  ESS\_moderator\_short}).
-\end{enumerate}
+\item ESS-project ({\bf ESS\_moderator\_long} and {\bf  ESS\_moderator\_short}).
+\end{itemize}
 
-When no model exists (e.g. not a Maxwellian distribution), you may have access to measurement, estimated flux distributions, event files, and - better - to MCNP/Triploli4 neutron event records. The following components are then for you.
+When no analytical model (e.g. a Maxwellian distribution) exits, 
+one may have access to measurement, estimated flux distributions, 
+event files, and - better - to MCNP/Triploli4 neutron event records. 
+The following components are then useful:
 
-\begin{enumerate}
-\item{{\bf misc/Virtual\_input} can read a \MCS\ event file (in text or binary format), often bringing a factor 10 speed-up. See section \ref{virtual_input}.}
-\item{{\bf contrib/Virtual\_tripoli4\_input} does the same, but from event files (text format) obtained from the \emph{Tripoli4} \cite{tripoli_webpage} reactor simulation program. Such files are usually huge.\index{Sources!Virtual source from Tripoli4}}
-\item{{\bf misc/Vitess\_input} can read \emph{Vitess} \cite{vitess_webpage} neutron event binary files.\index{Sources!Virtual source from Vitess}}
-\item{{\bf optics/Filter\_gen} reads a 1D distributionb from a file, and may either modify or set the flux according to it.\index{Sources!from 1D table input}}
-\item{A component for reading MCNP "PTRAC" records is planed for a next release. Contact us if you wish to participate.}
-\end{enumerate}
+\begin{itemize}
+\item{{\bf misc/Virtual\_input} can read a \MCS\ event file 
+(in text or binary format), often bringing an order-of-magnitude speed-up. 
+See section \ref{virtual_input}.}
+\item{{\bf contrib/Virtual\_tripoli4\_input} does the same, but from event files (text format) obtained from the \emph{Tripoli4} \cite{tripoli_webpage} reactor simulation program. Such files are usually huge.}
+\item{{\bf misc/Vitess\_input} can read \emph{Vitess} \cite{vitess_webpage} neutron event binary files.}
+\item{{\bf optics/Filter\_gen} reads a 1D distribution from a file, and may either modify or set the flux according to it.}
+\item{A component for reading MCNP "PTRAC" records is planed for a future release. 
+Please contact us if you like to participate.}
+\end{itemize}
