--- a/trunk/optics.tex
+++ b/trunk/optics.tex
@@ -27,6 +27,11 @@ as well as the ``generic'' component {\bf Arm}.
 \newpage
 \input{guide}
 
+\chapter{Time of flight optical components:
+Choppers, velocity selectors}
+We list in this chapter some of the optics components that may be used for TOF class instrument simulations.
+\index{Library!Components!optics}
+
 \newpage
 \input{chopper}
 
