--- a/trunk/sources.tex
+++ b/trunk/sources.tex
@@ -107,7 +107,7 @@ Other ways to speed-up simulations are to read events from a file. See section \
 \input{Monitor_Optimizer}
 
 \newpage
-\section{Other sources components}
+\section{Other sources components: contributed pulsed sources, virtual sources (event files)}
 \label{sources-seealso}
 
 There are many other source definitions in \MCS .
